--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -16,6 +16,12 @@ jobs:
     steps:
           - name: Checkout Repository
             uses: actions/checkout@v4
+          - name: Gather Gradle properties
+            uses: madhead/read-java-properties@latest
+            id: gradle_properties
+            with:
+                 file: gradle.properties
+                 all: true
           - name: Grant Execute Permission for gradlew
             run: chmod +x gradlew
           - name: Get current date
@@ -36,5 +42,5 @@ jobs:
           - name: Upload Build Artifacts
             uses: actions/upload-artifact@v4
             with:
-              name: example-1.12.2-${{ steps.date.outputs.date }}-${{ github.run_number}}
+              name: ${{steps.gradle_properties.mod_id}}-1.12.2-${{ steps.date.outputs.date }}-${{ github.run_number}}
               path: build/libs
